<resources>
    <string name="app_name">OCR Converter</string>

    <string name="hello_world">Hello world!</string>
    <string name="button_upload">Upload</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_convert">Convert</string>
    <string name="title_activity_text_list">Text Activities</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Font Size</string>
    <string name="action_share">Share</string>
    <string name="action_save">Save</string>
    <string name="action_translate">Translate</string>
    <string name="action_speech">Speech</string>
    <string name="title_activity_text_detail">Text Details</string>
    <string name="title_activity_text_operation">Text Operations</string>
    <string name="facebook_app_id">368003316674306</string>
    <string name="action_view">View Image</string>
    <string name="action_history">History</string>
    <string name="action_clear">Clear</string>
    <string name="title_activity_text_to_edit">Edit Text</string>
    <string name="action_toedit">OK</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_guide">Guidelines</string>

</resources>
