<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="team14.cs442.com.TextOperationActivity">

    <item
        android:id="@+id/action_view"
        android:orderInCategory="100"
        android:title="@string/action_view"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_translate"
        android:orderInCategory="100"
        android:title="@string/action_translate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_speech"
        android:orderInCategory="100"
        android:title="@string/action_speech"
        app:showAsAction="never" />
</menu>
