<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ImageActivity">
    <item
        android:id="@+id/action_camera"
        android:orderInCategory="100"
        android:title="@string/action_camera"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_gallery"
        android:orderInCategory="100"
        android:title="@string/action_gallery"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_convert"
        android:orderInCategory="100"
        android:title="@string/action_convert"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_history"
        android:orderInCategory="100"
        android:title="@string/action_history"
        app:showAsAction="never" />
</menu>
