<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="5"
        android:gravity="top"
        android:orientation="vertical"
        android:background="@drawable/ocrscanning"
        android:id="@+id/layout1">


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/vie"
            >

            <ImageView
                android:id="@+id/image_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:onClick="uploadButton"
            android:text="@string/button_upload" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:onClick="convertButton"
            android:text="@string/action_convert" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:onClick="historyButton"
            android:text="@string/action_history" />



    </LinearLayout>


    


</LinearLayout>
